--- a/views/edit_todo.erb
+++ b/views/edit_todo.erb
@@ -1,4 +1,4 @@
-<form action='/edit_todo/:id' method='post'>
+<form action='/todo/<%=@todo['id']%>' method='post'>
 Task:<input type="text" name="task"><br>
 Specifics:<input type="text" name="task_description"><br>
    <% @people.each do |person| %>
