--- a/views/movie.erb
+++ b/views/movie.erb
@@ -5,4 +5,4 @@
   <li><%= @movie['director'] %></li>
 </ul>
 
-<a href="/edit_movie/<%= @movie['id']%>">Edit Movie</a>
+<a href="/movie/<%= @movie['id']%>/edit">Edit Movie</a>
