--- a/views/todo.erb
+++ b/views/todo.erb
@@ -1,4 +1,4 @@
 <h2><%= @todo['task']%></h2>
 <p><%= @todo['task_description']%></p>
 
-<a href="/edit_todo/<%= @todo['id']%>">Edit Task</a>
+<a href="/todo/<%= @todo['id']%>/edit">Edit Task</a>
