--- a/views/edit_movie.erb
+++ b/views/edit_movie.erb
@@ -1,4 +1,4 @@
-<form action='/edit_movie/:id' method='post'>
+<form action='/movie/<%= @movie['id']%>' method='post'>
 Change the movie name.. Can you do that?:
 <input type="text" name="movie_name" value=""></br>
 Change the release date:
